--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     
 }
 
-.text-center { font-family: marker felt, fantasy;
+.text-center { font-family: 'DM Serif Display', serif;
     font-size: 100px;
 
 }
